@@ -7,6 +7,7 @@
 		tjDecompressHeader;
 		tjDecompressHeader2;
 		tjDecompress;
+		tjDecompress2;
 		tjDestroy;
 		tjGetErrorStr;
 	local:
